// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField applies theme and style props 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        Object {
          "backgroundColor": "red",
        },
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/visibilityOff.png",
          }
        }
        style={
          Array [
            Object {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            Array [
              Object {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              Object {
                "backgroundColor": "blue",
              },
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField renders as expected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/visibilityOff.png",
          }
        }
        style={
          Array [
            Object {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            Array [
              Object {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField renders as expected when disabled 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "opacity": 0.6,
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={false}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Show password"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "opacity": 0.6,
          },
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/visibilityOff.png",
          }
        }
        style={
          Array [
            Object {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            Array [
              Object {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`PasswordField should be able to hide show password icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={true}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
  </View>
</View>
`;

exports[`PasswordField should be able to obscure text programmatically 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
      },
      Array [
        Object {},
        undefined,
      ],
    ]
  }
  testID="amplify__text-field-container"
>
  <Text
    accessibilityLabel="Label"
    accessibilityRole="text"
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 21,
        },
        Object {
          "color": "hsl(210, 50%, 10%)",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "lineHeight": 21,
            "padding": 4,
          },
          undefined,
        ],
      ]
    }
  >
    Label
  </Text>
  <View
    accessible={true}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "paddingHorizontal": 8,
      }
    }
    testID="amplify__text-field__input-container"
  >
    <TextInput
      accessibilityState={
        Object {
          "disabled": undefined,
        }
      }
      accessible={true}
      autoCapitalize="none"
      editable={true}
      placeholderTextColor="hsl(210, 10%, 40%)"
      secureTextEntry={false}
      selectionColor="hsl(210, 50%, 10%)"
      style={
        Array [
          Object {
            "color": "hsl(210, 50%, 10%)",
            "flexGrow": 1,
            "fontSize": 16,
            "paddingVertical": 12,
          },
          undefined,
        ]
      }
      testID="passwordInput"
    />
    <View
      accessibilityLabel="Hide password"
      accessibilityRole="button"
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {},
          undefined,
          undefined,
        ]
      }
    >
      <Image
        accessibilityRole="image"
        source={
          Object {
            "testUri": "../../../src/assets/icons/visibilityOn.png",
          }
        }
        style={
          Array [
            Object {
              "height": 16,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 16,
            },
            Array [
              Object {
                "tintColor": "hsl(210, 10%, 40%)",
              },
              undefined,
            ],
          ]
        }
      />
    </View>
  </View>
</View>
`;
